Add run configs for "NIGERIA_FUEL_BIOHENRY\main_15_min_mysql.py"

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,7 +3,32 @@
     // Hover to view descriptions of existing attributes.
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
-    "configurations": [],
+    "configurations": [
+      {
+        "name": "Python: Current File with no args",
+        "type": "debugpy",
+        "request": "launch",
+        "program": "${file}",
+        "args": ["none"],
+        "console": "integratedTerminal"
+    },
+    {
+        "name": "Python: Current File with ARCH FILES arg",
+        "type": "debugpy",
+        "request": "launch",
+        "program": "${file}",
+        "args": ["archive_files"],
+        "console": "integratedTerminal"
+    },
+    {
+      "name": "Python: Current File with ARCH DATA MYSQL arg",
+      "type": "debugpy",
+      "request": "launch",
+      "program": "${file}",
+      "args": ["archive_data"],
+      "console": "integratedTerminal"
+  }
+    ],
     "terminal.integrated.profiles.windows": {
         "PowerShell": {
           "source": "PowerShell",
