ADAM_GB fix up code

--- a/.gitignore
+++ b/.gitignore
@@ -164,3 +164,6 @@ CBC/
 CBC21011/
 SIM/
 Tesseract-OCR/
+ADAM_NOTEBOOKS/Parsing Error Log.xlsx
+ADAM_NOTEBOOKS/02 Meter Readings/eyedro_meters_pg_db_backup_20240409
+ADAM_NOTEBOOKS/03 Verbose Meter Details/z_Archive/
