--- a/.gitignore
+++ b/.gitignore
@@ -167,3 +167,4 @@ Tesseract-OCR/
 ADAM_NOTEBOOKS/Parsing Error Log.xlsx
 ADAM_NOTEBOOKS/02 Meter Readings/eyedro_meters_pg_db_backup_20240409
 ADAM_NOTEBOOKS/03 Verbose Meter Details/z_Archive/
+bfg.jar
