--- a/.gitignore
+++ b/.gitignore
@@ -170,3 +170,4 @@ ADAM_NOTEBOOKS/03 Verbose Meter Details/z_Archive/
 bfg.jar
 config.ini
 kobo_gen_survey/config.py
+NIGERIA_FUEL_BIOHENRY/data/archive/
